[package]
name = "lennox-ac"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

#![feature(ptr_from_ref)]
[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[env]
ESP_IDF_VERSION="5.0.3"

[build]
rustflags = "--cfg espidf_time64"


[dependencies]
esp-idf-hal = "=0.41.1"
embedded-svc = "=0.25.3"
esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
rgb-led = { path = "../lib/rgb-led" }
wifi = { path = "../lib/wifi" }
log = "=0.4.17"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"
get-uuid = { path = "../lib/get-uuid" }
mqtt-messages = { path = "../lib/mqtt-messages" }
shtcx = "=0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "=0.31.2"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"
