[package]
name = "rgb-led"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]

[dependencies]
esp-idf-sys = { version = "=0.33.0" }
esp-idf-hal = "=0.41.1"
rgb = "=0.8.36"
log = "=0.4.17"
anyhow = "=1.0.69"

[build-dependencies]
embuild = "0.31.2"
anyhow = "=1.0.69"

[dev-dependencies]
anyhow = "=1.0.69"
esp-idf-sys = { version = "=0.33.0", features = ["native", "binstart"] }
esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
